// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ExpensesSummary render correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $400
     
  </h1>
</div>
`;

exports[`should ExpensesSummary render correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $40,067
     
  </h1>
</div>
`;
